<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/purple_500"
        app:itemIconTint="@color/bottom_navigation_menu_colors"
        app:itemTextColor="@color/bottom_navigation_menu_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_centerInParent="true"
        android:onClick="recipeSearch"
        android:text="@string/give_me_a_recipe"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNewRecipeSearch"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:alpha="0"
        android:onClick="newRecipeSearch"
        android:text="@string/find_a_new_recipe"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"/>

    <Button
        android:id="@+id/buttonAddToFavorites"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:alpha="0"
        android:onClick="addFavorite"
        android:text="@string/favorite"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline" />

    <Button
        android:id="@+id/buttonRemoveFromFavorites"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:alpha="0"
        android:onClick="removeFavorite"
        android:text="@string/unfavorite"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline" />


    <TextView
        android:id="@+id/textViewRecipeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewRecipe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:paddingBottom="135dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecipeTitle">


        <TextView
            android:id="@+id/textViewRecipe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp" />

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>